# advent_of_code_2022

go/day0/: main.go  main_test.go
go/day1/: main.go  main_test.go
go/day4/: main.go  main_test.go
go/day6/: main.go  main_test.go
go/day7/: main.go  main_test.go
go/day8/: main.go  main_test.go
go/day9/: main.go  main_test.go
go/utils/: main.go
python/advent_of_code_2022/: pyproject.toml
python/advent_of_code_2022/advent_of_code_2022/: README.md
python/advent_of_code_2022/advent_of_code_2022/day0/: day0.py
python/advent_of_code_2022/advent_of_code_2022/day1/: day1.py
python/advent_of_code_2022/advent_of_code_2022/day10/: day10.py
python/advent_of_code_2022/advent_of_code_2022/day11/: day11.py
python/advent_of_code_2022/advent_of_code_2022/day12/: day12.py
python/advent_of_code_2022/advent_of_code_2022/day13/: day13.py
python/advent_of_code_2022/advent_of_code_2022/day14/: day14.py
python/advent_of_code_2022/advent_of_code_2022/day15/: day15.py
python/advent_of_code_2022/advent_of_code_2022/day2/: day2.py
python/advent_of_code_2022/advent_of_code_2022/day3/: day3.py
python/advent_of_code_2022/advent_of_code_2022/day4/: day4.py
python/advent_of_code_2022/advent_of_code_2022/day5/: day5.py
python/advent_of_code_2022/tests/: test_day_0.py  test_day_1.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_15.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py
typescript/: utils.ts
typescript/day0/: day0.ts  day0_test.ts
typescript/day1/: day1.ts  day1_test.ts
